--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -74,199 +74,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Problem instance: 1\n",
-      "part lengths:  1000\n"
+      "Problem instance: 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 130773.67it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 135773.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (1485, True)\n",
+      "Calls, isSol:  (1496, True)\n",
       "\n",
-      "Problem instance: 2\n",
-      "part lengths:  1000\n"
+      "Problem instance: 2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:00<00:00, 52993.18it/s]\n"
+      "100%|██████████| 500/500 [00:00<00:00, 57266.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (1841, True)\n",
+      "Calls, isSol:  (1906, True)\n",
       "\n",
-      "Problem instance: 3\n",
-      "part lengths:  1000\n"
+      "Problem instance: 5\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 334/334 [00:00<00:00, 26411.60it/s]\n"
+      "100%|██████████| 200/200 [00:00<00:00, 9675.89it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (2381, True)\n",
+      "Calls, isSol:  (3253, True)\n",
       "\n",
-      "Problem instance: 5\n",
-      "part lengths:  1000\n"
+      "Problem instance: 10\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:00<00:00, 10470.05it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 2356.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (3000, True)\n",
-      "\n",
-      "Problem instance: 7\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 143/143 [00:00<00:00, 4689.27it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (3920, True)\n",
-      "\n",
-      "Problem instance: 10\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 2193.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (4644, True)\n",
-      "\n",
-      "Problem instance: 20\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:00<00:00, 478.89it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (5658, True)\n",
-      "\n",
-      "Problem instance: 50\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:00<00:00, 67.31it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (7862, True)\n",
-      "\n",
-      "Problem instance: 100\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 14.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (9264, True)\n",
-      "\n",
-      "Problem instance: 200\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:01<00:00,  3.35it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (10596, True)\n",
-      "\n",
-      "Problem instance: 500\n",
-      "part lengths:  1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:05<00:00,  2.65s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calls, isSol:  (15362, True)\n",
+      "Calls, isSol:  (4358, True)\n",
       "\n"
      ]
     },
@@ -350,7 +227,7 @@
     "\n",
     "GENOME_LENGTH = 1000\n",
     "instances = [1, 2, 5, 10]\n",
-    "instances = [1, 2, 3, 5, 7, 10, 20, 50, 100, 200, 500] # for testing perf and splitting diff numbers\n",
+    "# instances = [1, 2, 3, 5, 7, 10, 20, 50, 100, 200, 500] # for testing perf and splitting diff numbers\n",
     "\n",
     "for instance in instances:\n",
     "    print(f\"Problem instance: {instance}\")\n",
