--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 171763.95it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 121701.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (1503, True)\n",
+      "Calls, solCheck:  (1507, True)\n",
       "\n",
       "Problem instance: 2\n"
      ]
@@ -85,14 +85,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:00<00:00, 59024.82it/s]\n"
+      "100%|██████████| 500/500 [00:00<00:00, 52313.71it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (1818, True)\n",
+      "Calls, solCheck:  (1911, True)\n",
       "\n",
       "Problem instance: 5\n"
      ]
@@ -101,14 +101,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:00<00:00, 9068.96it/s]\n"
+      "100%|██████████| 200/200 [00:00<00:00, 8916.27it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (3104, True)\n",
+      "Calls, solCheck:  (3273, True)\n",
       "\n",
       "Problem instance: 10\n"
      ]
@@ -117,14 +117,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 2041.86it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 1858.69it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calls, isSol:  (4670, True)\n",
+      "Calls, solCheck:  (4508, True)\n",
       "\n"
      ]
     },
@@ -143,7 +143,7 @@
     "\n",
     "\n",
     "def mutate(ind, fitness):\n",
-    "    \"\"\"mutate one random gene and return mutated part if fitness is better. Full GA could be used here\"\"\"\n",
+    "    \"\"\"mutate one random gene and return mutated part if fitness is better\"\"\"\n",
     "    f1 = fitness(ind)\n",
     "    if f1 == 1.0:\n",
     "        return ind, f1\n",
@@ -153,6 +153,7 @@
     "    mutated[i] = 1 - mutated[i]\n",
     "    f2 = fitness(mutated)\n",
     "\n",
+    "    # mmmmm eugenics\n",
     "    if f2 > f1:\n",
     "        return mutated, f2\n",
     "\n",
@@ -201,7 +202,7 @@
     "        pbar.update(1)\n",
     "\n",
     "    individual = [gene for part in evolved_parts for gene in part]\n",
-    "    return fitness.calls, sum(individual) == genome_length\n",
+    "    return fitness.calls, sum(individual) == genome_length # sum for check its not used to evaluate fitness\n",
     "\n",
     "\n",
     "# ---------------------------------------------------\n",
@@ -212,7 +213,7 @@
     "\n",
     "for instance in instances:\n",
     "    print(f\"Problem instance: {instance}\")\n",
-    "    print(\"Calls, isSol: \", run(instance, GENOME_LENGTH))\n",
+    "    print(\"Calls, solCheck: \", run(instance, GENOME_LENGTH))\n",
     "    print()"
    ]
   }
