some on quixo; lab10 qlearning start

--- a/quixo/runs.ipynb
+++ b/quixo/runs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -47,9 +47,9 @@
     "s = 0\n",
     "for i in range(1000):\n",
     "    g = Game()\n",
-    "    player1 = MyPlayer(1)\n",
-    "    player2 = RandomPlayer()\n",
-    "    winner = g.play(player2, player1)\n",
+    "    player1 = RandomPlayer()\n",
+    "    player2 = MyPlayer(1)\n",
+    "    winner = g.play(player1, player2)\n",
     "    s += winner\n",
     "print(\" MyPlayer wins:\", s)\n",
     "\n",
@@ -60,7 +60,7 @@
     "    player1 = MyPlayer(0)\n",
     "    player2 = RandomPlayer()\n",
     "    winner = g.play(player1, player2)\n",
-    "    s += 1 - winner\n",
+    "    s += 1 if winner == 0 else 0\n",
     "print(\" MyPlayer wins:\", s)\n",
     "\n",
     "print(\"\\nMyPlayer vs MyPlayer\")\n",
@@ -74,7 +74,8 @@
     "    p1 += 1 if winner == 0 else 0\n",
     "    p2 += 1 if winner == 1 else 0\n",
     "print(\" MyPlayer as P1 wins:\", p1)\n",
-    "print(\" MyPlayer as P2 wins:\", p2)"
+    "print(\" MyPlayer as P2 wins:\", p2)\n",
+    "\n"
    ]
   }
  ],
