what is this fucker doing

--- a/lab10/lab10.ipynb
+++ b/lab10/lab10.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RandomPlayer:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def get_move(self, game):\n",
+    "        return game.get_available_moves()[np.random.choice(len(game.get_available_moves()))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +113,7 @@
     "\n",
     "    def getQ(self, state, action):\n",
     "        key = str((state, action))\n",
+    "        # TODO check for equivalent transformations\n",
     "        if self.q.get(key) is None:\n",
     "            self.q[key] = 1.0\n",
     "        return self.q.get(key)\n",
@@ -138,72 +153,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:17<00:00, 289.63it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# from tqdm import tqdm\n",
-    "\n",
-    "# def train_QAgent(agent, environment, episodes):\n",
-    "#     for _ in tqdm(range(episodes)):\n",
-    "#         environment.reset()\n",
-    "#         while not environment.is_game_over():\n",
-    "#             available_moves = environment.get_available_moves()\n",
-    "#             action = agent.choose_action(environment.board, available_moves)\n",
-    "\n",
-    "#             environment.make_move(action)\n",
-    "\n",
-    "#             if environment.is_winner(1):\n",
-    "#                 reward = 1\n",
-    "#             elif environment.is_winner(-1):\n",
-    "#                 reward = -1\n",
-    "#             else:\n",
-    "#                 reward = 0\n",
-    "\n",
-    "#             agent.updateQ(environment.board, action, reward, reward)\n",
+    "from tqdm import tqdm\n",
     "\n",
     "\n",
-    "# env = TicTacToe()\n",
-    "# agent = QAgent()\n",
-    "# train_QAgent(agent, env, 100_000)\n",
-    "# agent.save_q_values()"
+    "def evaluate_env(environment, player):\n",
+    "    score = 0\n",
+    "\n",
+    "    if environment.is_winner(player):\n",
+    "        return 100\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        if np.count_nonzero(environment.board[i, :] == player) >= 2:\n",
+    "            score += 40\n",
+    "        if np.count_nonzero(environment.board[:, i] == player) >= 2:\n",
+    "            score += 40\n",
+    "\n",
+    "    if np.count_nonzero(np.diag(environment.board) == player) >= 2:\n",
+    "        score += 40\n",
+    "    if np.count_nonzero(np.diag(np.fliplr(environment.board)) == player) >= 2:\n",
+    "        score += 40\n",
+    "\n",
+    "    # if exists line with 2 opponent pieces and 1 by agent give good score\n",
+    "    for i in range(3):\n",
+    "        if (\n",
+    "            np.count_nonzero(environment.board[i, :] == -player) == 2\n",
+    "            and np.count_nonzero(environment.board[i, :] == player) == 1\n",
+    "        ):\n",
+    "            score += 50\n",
+    "        if (\n",
+    "            np.count_nonzero(environment.board[:, i] == -player) == 2\n",
+    "            and np.count_nonzero(environment.board[:, i] == player) == 1\n",
+    "        ):\n",
+    "            score += 50\n",
+    "    \n",
+    "    if (\n",
+    "        np.count_nonzero(np.diag(environment.board) == -player) == 2\n",
+    "        and np.count_nonzero(np.diag(environment.board) == player) == 1\n",
+    "    ):\n",
+    "        score += 50\n",
+    "    if (\n",
+    "        np.count_nonzero(np.diag(np.fliplr(environment.board)) == -player) == 2\n",
+    "        and np.count_nonzero(np.diag(np.fliplr(environment.board)) == player) == 1\n",
+    "    ):\n",
+    "        score += 50\n",
+    "\n",
+    "    # if exists line with 2 agent pieces and 1 empty give bad score\n",
+    "    for i in range(3):\n",
+    "        if (\n",
+    "            np.count_nonzero(environment.board[i, :] == player) == 2\n",
+    "            and np.count_nonzero(environment.board[i, :] == 0) == 1\n",
+    "        ):\n",
+    "            score -= 50\n",
+    "        if (\n",
+    "            np.count_nonzero(environment.board[:, i] == player) == 2\n",
+    "            and np.count_nonzero(environment.board[:, i] == 0) == 1\n",
+    "        ):\n",
+    "            score -= 50\n",
+    "        \n",
+    "    if (\n",
+    "        np.count_nonzero(np.diag(environment.board) == player) == 2\n",
+    "        and np.count_nonzero(np.diag(environment.board) == 0) == 1\n",
+    "    ):\n",
+    "        score -= 50\n",
+    "    if (\n",
+    "        np.count_nonzero(np.diag(np.fliplr(environment.board)) == player) == 2\n",
+    "        and np.count_nonzero(np.diag(np.fliplr(environment.board)) == 0) == 1\n",
+    "    ):\n",
+    "        score -= 50\n",
+    "\n",
+    "    return score\n",
+    "\n",
+    "\n",
+    "def train_QAgent(agent, environment, episodes):\n",
+    "    for _ in tqdm(range(episodes)):\n",
+    "        environment.reset()\n",
+    "        while not environment.is_game_over():\n",
+    "            available_moves = environment.get_available_moves()\n",
+    "            action = agent.choose_action(environment.board, available_moves)\n",
+    "\n",
+    "            environment.make_move(action)\n",
+    "\n",
+    "            \n",
+    "            if environment.is_winner(1):\n",
+    "                reward = 100\n",
+    "            elif environment.is_winner(-1):\n",
+    "                reward = -100\n",
+    "            else:\n",
+    "                reward = evaluate_env(environment, environment.current_player)\n",
+    "\n",
+    "\n",
+    "            agent.updateQ(environment.board, action, reward, reward)\n",
+    "\n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "env = TicTacToe()\n",
+    "agent = QAgent()\n",
+    "train_QAgent(agent, env, 5000)\n",
+    "agent.save_q_values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Player: 1\n",
-      "X - - \n",
-      "- - - \n",
-      "- - - \n",
-      "Current Player: -1\n",
-      "X - - \n",
-      "- O - \n",
-      "- - - \n",
-      "Current Player: 1\n",
-      "X - X \n",
-      "- O - \n",
-      "- - - \n",
-      "Current Player: -1\n",
-      "X O X \n",
-      "- O - \n",
-      "- - - \n",
-      "Current Player: 1\n",
-      "X O X \n",
-      "- O X \n",
-      "- - - \n",
-      "Current Player: -1\n",
-      "X O X \n",
-      "- O X \n",
-      "- O - \n",
       "\n",
-      "O wins!\n"
+      "QAgent(P1) vs QAgent(P2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:01<00:00, 656.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P1 wins: 585\n",
+      "P2 wins: 295\n",
+      "Ties: 120\n",
+      "\n",
+      "QAgent(P1) vs RandomPlayer(P2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:01<00:00, 903.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P1 Wins: 582\n",
+      "P2 wins: 290\n",
+      "Ties: 128\n",
+      "\n",
+      "RandomPlayer(P1) vs QAgent(P2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:01<00:00, 995.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P1 Wins: 588\n",
+      "P2 wins: 301\n",
+      "Ties: 111\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -211,26 +343,82 @@
     "env = TicTacToe()\n",
     "agent = QAgent()\n",
     "agent.load_q_values()\n",
+    "MATCHES=1000\n",
     "\n",
-    "env.reset()\n",
-    "while not env.is_game_over():\n",
-    "    print(f\"Current Player: {env.current_player}\")\n",
-    "    if env.current_player == 1:\n",
+    "\n",
+    "print(\"\\nQAgent(P1) vs QAgent(P2)\")\n",
+    "wins=0\n",
+    "losses=0\n",
+    "ties=0\n",
+    "for _ in tqdm(range(MATCHES)):\n",
+    "    env.reset()\n",
+    "    while not env.is_game_over():\n",
     "        action = agent.choose_action(\n",
     "            str(env.board.flatten()), env.get_available_moves()\n",
     "        )\n",
+    "        env.make_move(action)\n",
+    "        if env.is_winner(1):\n",
+    "            wins+=1\n",
+    "        if env.is_winner(-1):\n",
+    "            losses+=1\n",
+    "        if env.is_tie():\n",
+    "            ties+=1\n",
     "\n",
-    "    else:\n",
-    "        action = tuple(map(int, input(\"Enter O's move (row, column): \").split()))\n",
+    "print(f\"P1 wins: {wins}\")\n",
+    "print(f\"P2 wins: {losses}\")\n",
+    "print(f\"Ties: {ties}\")\n",
     "\n",
-    "    env.make_move(action)\n",
-    "    env.print_board()\n",
-    "    if env.is_winner(1):\n",
-    "        print(\"\\nX wins!\")\n",
-    "    if env.is_winner(-1):\n",
-    "        print(\"\\nO wins!\")\n",
-    "    if env.is_tie():\n",
-    "        print(\"\\nTie!\")"
+    "\n",
+    "print(\"\\nQAgent(P1) vs RandomPlayer(P2)\")\n",
+    "wins=0\n",
+    "losses=0\n",
+    "ties=0\n",
+    "for _ in tqdm(range(MATCHES)):\n",
+    "    env.reset()\n",
+    "    while not env.is_game_over():\n",
+    "        if env.current_player == 1:\n",
+    "            action = agent.choose_action(\n",
+    "                str(env.board.flatten()), env.get_available_moves()\n",
+    "            )\n",
+    "        else:\n",
+    "            action = env.get_available_moves()[np.random.choice(len(env.get_available_moves()))]\n",
+    "        env.make_move(action)\n",
+    "        if env.is_winner(1):\n",
+    "            wins+=1\n",
+    "        if env.is_winner(-1):\n",
+    "            losses+=1\n",
+    "        if env.is_tie():\n",
+    "            ties+=1\n",
+    "\n",
+    "print(f\"P1 Wins: {wins}\")\n",
+    "print(f\"P2 wins: {losses}\")\n",
+    "print(f\"Ties: {ties}\")\n",
+    "\n",
+    "\n",
+    "print(\"\\nRandomPlayer(P1) vs QAgent(P2)\")\n",
+    "wins=0\n",
+    "losses=0\n",
+    "ties=0\n",
+    "for _ in tqdm(range(MATCHES)):\n",
+    "    env.reset()\n",
+    "    while not env.is_game_over():\n",
+    "        if env.current_player == -1:\n",
+    "            action = agent.choose_action(\n",
+    "                str(env.board.flatten()), env.get_available_moves()\n",
+    "            )\n",
+    "        else:\n",
+    "            action = env.get_available_moves()[np.random.choice(len(env.get_available_moves()))]\n",
+    "        env.make_move(action)\n",
+    "        if env.is_winner(1):\n",
+    "            wins+=1\n",
+    "        if env.is_winner(-1):\n",
+    "            losses+=1\n",
+    "        if env.is_tie():\n",
+    "            ties+=1\n",
+    "\n",
+    "print(f\"P1 Wins: {wins}\")\n",
+    "print(f\"P2 wins: {losses}\")\n",
+    "print(f\"Ties: {ties}\")"
    ]
   }
  ],
